--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,28 +6,60 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --font-display: Graphik;
+  --font-body: Graphik;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
-}
+} */
 
+.theme-animals {
+  --font-display: Graphik;
+  --font-body: Graphik;
+}
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
+  /* background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)); */
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+@font-face {
+  font-family: Graphik;
+  font-weight: 300;
+  src: url("../fonts/GraphikLight.otf");
+}
+@font-face {
+  font-family: Graphik;
+  font-weight: 400;
+  src: url("../fonts/GraphikRegular.otf");
+}
+@font-face {
+  font-family: Graphik;
+  font-weight: 500;
+  src: url("../fonts/GraphikMedium.otf");
+}
+@font-face {
+  font-family: Graphik;
+  font-weight: 600;
+  src: url("../fonts/GraphikSemibold.otf");
+}
+@font-face {
+  font-family: Graphik;
+  font-weight: 700;
+  src: url("../fonts/GraphikBold.otf");
 }
